# mcph

./: .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.hermes/codex-prompts/: phase-1-parser.md
.hermes/droid-prompts/: phase-3-http.md  phase-4-protocol.md  phase-5-assertion.md  phase-6-capture.md  phase-7-session.md  phase-8-reporting.md  phase-9-10-final.md
docs/site/: package-lock.json  package.json  svelte.config.js  vite.config.ts
docs/site/src/routes/: +layout.svelte  +page.svelte
docs/site/src/routes/api/: +page.svelte
docs/site/src/routes/architecture/: +page.svelte
docs/site/src/routes/phases/: +page.svelte
examples/: conformance.mcph  echo-server.py
scripts/: build.sh
src/mcph/: __init__.py  assertion.py  ast.py  capture.py  cli.py  exceptions.py  parser.py  protocol.py  reporter.py  runner.py  session.py
src/mcph/transport/: __init__.py  http_transport.py  stdio.py
tests/: test_assertion.py  test_capture.py  test_cli.py  test_parser.py  test_protocol.py  test_reporter.py  test_runner.py  test_transport_http.py  test_transport_stdio.py
tests/integration/: test_e2e_stdio.py
